--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -1,3 +1,15 @@
+.Modale:before {
+    content: "";
+    display: none;
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+}
+
 .Modal__container {
     border-radius: 5px;
     position: absolute;
