style changes to add and edit attributes

--- a/src/components/DummyQuestions/styles.scss
+++ b/src/components/DummyQuestions/styles.scss
@@ -46,7 +46,15 @@
     }
 
     .EditOption__modal {
-        bottom: 100;
+        bottom: 100; 
+    }
+
+    .Save__attribute {
+        border-radius: 5px;
+        background-color: #707070;
+        margin: 5px;
+        color: white;
+        padding: 5px;
     }
 
     .attributes__list {
